Feat: add kospi kosdaq prediction

--- a/environment.yml
+++ b/environment.yml
@@ -68,3 +68,9 @@ dependencies:
   - xz
   - zlib
   - apscheduler
+  - pymysql
+  - aio-databases
+  - pip:
+  - pip:
+      - databases
+      - aiomysql
